--- a/SelahSeries/Views/Blog/Index.cshtml
+++ b/SelahSeries/Views/Blog/Index.cshtml
@@ -272,6 +272,9 @@
 </div>
 
 <style>
+    .fa, .far, .fas {
+        font-family: "FontAwesome";
+    }
     .mb-4 {
         color: #f2ba16;
         font-size: 0.6em;
