--- a/SelahSeries/Views/Home/About.cshtml
+++ b/SelahSeries/Views/Home/About.cshtml
@@ -131,7 +131,7 @@
                     <div class="card" style="border-radius:0px">
                         <img class="card-img" src="/NewFolder2/new/mrsTiti.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <p class="h5 card-text">Titilayo: a World of Vision Embedded in Tranquillity</p>
+                            <p class="h5 card-text">Titilayo: A World of Vision Embedded in Tranquillity</p>
                             <p class="h6">
                                 Titilayo is a wife, mother, scientist, researcher, medical writer, editor, coach, Public
                                 Health analyst and a child of God.
@@ -194,7 +194,7 @@
     margin-bottom: 125px;
     margin-top:80px;
     padding-top: 50px;">
-    <h3 style="color:#ad001c; text-align:center; padding-top:20px">Our Interesting love story</h3>
+    <h3 style="color:#ad001c; text-align:center; padding-top:20px">Our Interesting Love Story</h3>
     <h4 style="color:#f2ba16; text-align:center; padding-bottom:20px">By 'Lekan Agunbiade</h4>
     <div style="margin-left:auto; margin-right:auto">
         <img class="eureka" src="~/NewFolder2/new/two-gold-rings-near-white-and-pink-huyflowers-1405678 (1).jpg" />
