--- a/SelahSeries/Views/Blog/post.cshtml
+++ b/SelahSeries/Views/Blog/post.cshtml
@@ -5,8 +5,8 @@
 }
 @section AddMetaTags{
 
-    <meta property="og:title" content=("@Model.Post.Title")>
-    <meta property="og:description" content="@Model.Post.Category.Title Talks @Model.Post.Title By @Model.Post.Author")>
+    <meta property="og:title" content="@Model.Post.Title">
+    <meta property="og:description" content="@Model.Post.Category.Title Talks @Model.Post.Title By @Model.Post.Author">
     <meta property="og:image" content="selahseries.com/uploads/@Model.Post.TitleImageUrl">
     <meta property="og:url" content="@Uri.EscapeDataString(pageURL)">
     <meta property="og:type" content="website">
