--- a/SelahSeries/Views/Books/Index.cshtml
+++ b/SelahSeries/Views/Books/Index.cshtml
@@ -8,7 +8,6 @@
 }
 
 @section AddToHead {
-    <link rel="icon" href="img/favicon.png" type="image/png" />
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/main_styles.css">
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/responsive.css">
     <!-- Site Icons -->
@@ -306,6 +305,9 @@
 <!-- End Shop Page -->
 
 <style>
+    .fa, .far, .fas {
+        font-family: "FontAwesome";
+    }
     .gray_btn:hover {
         color: black;
         border: 1px solid black;
