--- a/SelahSeries/Views/Support/Send_Message.cshtml
+++ b/SelahSeries/Views/Support/Send_Message.cshtml
@@ -57,20 +57,20 @@
                 {
                     @Html.AntiForgeryToken()
                     <div class="input-group">
-                        <input class="input--style-2" type="text" placeholder="Full name" name="fullname" required="required">
+                        <input class="input--style-2" type="text" placeholder="Full name" name="fullname" required>
                     </div>
                     <div class="row row-space">
                         <div class="col-2">
                             <div class="input-group">
                                 <div class="rs-select2 js-select-simple select--no-search">
-                                    <select name="age" required="required">
-                                        <option disabled="disabled" selected="selected">Age</option>
-                                        <option>16-20</option>
-                                        <option>21-25</option>
-                                        <option>26-30</option>
-                                        <option>31-35</option>
-                                        <option>35-46</option>
-                                        <option>46 & above</option>
+                                    <select name="age" required>
+                                        <option disabled="disabled" selected="selected" value="">Age</option>
+                                        <option value="16-20">16-20</option>
+                                        <option value="21-25">21-25</option>
+                                        <option value="26-30">26-30</option>
+                                        <option value="31-35">31-35</option>
+                                        <option value="35-46">35-46</option>
+                                        <option value="47-100">46 & above</option>
                                     </select>
                                     <div class="select-dropdown"></div>
                                 </div>
@@ -79,10 +79,10 @@
                         <div class="col-2">
                             <div class="input-group">
                                 <div class="rs-select2 js-select-simple select--no-search">
-                                    <select name="gender" required="required">
-                                        <option disabled="disabled" selected="selected">Gender</option>
-                                        <option>Male</option>
-                                        <option>Female</option>
+                                    <select name="gender" required>
+                                        <option disabled="disabled" selected="selected" value="">Gender</option>
+                                        <option value="Male">Male</option>
+                                        <option value="Female">Female</option>
                                     </select>
                                     <div class="select-dropdown"></div>
                                 </div>
@@ -98,10 +98,10 @@
                         <div class="col-2">
                             <div class="input-group">
                                 <div class="rs-select2 js-select-simple select--no-search">
-                                    <select name="category" required="required">
-                                        <option disabled="disabled" selected="selected">Message Category</option>
-                                        <option>Prayer</option>
-                                        <option>Counselling</option>
+                                    <select name="category" required>
+                                        <option disabled="disabled" selected="selected" value="">Message Category</option>
+                                        <option value="Prayer">Prayer</option>
+                                        <option value="Counselling">Counselling</option>
                                     </select>
                                     <div class="select-dropdown"></div>
                                 </div>
@@ -109,13 +109,13 @@
                         </div>
                     </div>
                     <div class="input-group">
-                        <input class="input--style-2" type="email" placeholder="Email" name="email" required="required">
+                        <input class="input--style-2" type="email" placeholder="Email" name="email" required>
                     </div>
                     <div class="input-group">
                         <input class="input--style-2" type="text" placeholder="Your address">
                     </div>
                     <div class="input-group">
-                        <textarea class="input--style-2" name="message" placeholder="Write us a message" required="required"></textarea>
+                        <textarea class="input--style-2" name="message" placeholder="Write us a message" required></textarea>
                     </div>
 
                     <div class="p-t-30">
